--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Tutorial HTML</title>
         <link rel="stylesheet" href="./css/style.css">
         <style>
-           h1, h2, h3, h4, h5, h6 {
+           h1, h2, h3, h4, h5 {
             color: #3a0fb0;
             background-color: #d4600d;
            } 
@@ -22,8 +22,7 @@
         <h3>Olá Mundo!</h3>
         <h4>Olá Mundo!</h4>
         <h5>Olá Mundo!</h5>
-        <h6>Olá Mundo!</h6>
-        <p><b>Hypertext <i>Markup</i></b> Language (HTML) is the standard markup language for documents designed to be displayed in a web browser.<br> It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
+        <p><b>Hypertext <i>Markup</i></b> Language (HTML5) is the standard markup language for documents designed to be displayed in a web browser.<br> It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
         <p><strong>Web browsers</strong> receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for its appearance.</p>
     </body>
 </html>
