add links and logo image

--- a/iffinance/quem-somos.html
+++ b/iffinance/quem-somos.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>IFFinance</title>
+        <title>Quem Somos</title>
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
@@ -15,8 +15,8 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a class="active" href="./index.html">Home</a></li>
-                        <li><a href="./quem-somos.html">Quem Somos</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a class="active" href="./quem-somos.html">Quem Somos</a></li>
                         <li><a href="./bolsas.html">Bolsas</a></li>
                         <li><a href="./destaques.html">Destaques</a></li>
                         <li><a href="./contato.html">Contato</a></li>
@@ -26,7 +26,7 @@
         </header>
         <main>
             <div class="wrapper">
-                <h1>Home</h1>
+                <h1>Quem Somos</h1>
             </div>
         </main>
     </body>
