--- a/iffinance/destaques.html
+++ b/iffinance/destaques.html
@@ -10,8 +10,10 @@
         <header>
             <div class="wrapper">
                 <div id="logo">
-                    <img src="./img/finance-logo.svg" alt="Logo IF Finance">
-                    <h1><span>IF</span>Finance<h1>
+                    <a href="./index.html">
+                        <img src="./img/finance-logo.svg" alt="Logo IF Finance">
+                        <h1><span>IF</span>Finance<h1>
+                    </a>
                 </div>
                 <nav>
                     <ul>
