create table exchanges

--- a/iffinance/bolsas.html
+++ b/iffinance/bolsas.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Quem Somos</title>
+        <title>Bolsas</title>
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
@@ -29,6 +29,33 @@
         <main>
             <div class="wrapper">
                 <h1>Bolsas</h1>
+
+                <p>Relação de Bolsas por países.<p>
+
+                <table>
+                    <tr>
+                        <th colspan="3">Bolsas</th>
+                    </tr>
+                    <tr>
+                        <th class="tb-border-right">País</th>
+                        <th class="tb-border-right">Nome</th>
+                        <th>Sigla</th>
+                    </tr>
+                    <tr>
+                        <td class="tb-first-column">Brasil</td>
+                        <td>Ibovespa</td>
+                        <td>IBOV</td>
+                    </tr>
+                    <tr>
+                        <td class="tb-first-column" rowspan="2">EUA</td>
+                        <td>National Association of Securities Dealers Automated Quotations</td>
+                        <td>NASDAQ</td>
+                    </tr>
+                    <tr>
+                        <td>New York Stock Exchange</td>
+                        <td>NYSE</td>
+                    </tr>
+                </table>
             </div>
         </main>
     </body>
