add contact form

--- a/iffinance/contato.html
+++ b/iffinance/contato.html
@@ -29,6 +29,54 @@
         <main>
             <div class="wrapper">
                 <h1>Contatos</h1>
+
+                <form>
+                    <fieldset>
+                        <legend>Dados Pessoais</legend>
+                        <label for="nome">Nome:</label>
+                        <input type="text" id="nome" name="nome">
+                        <label for="senha">Senha:</label>
+                        <input type="password" id="senha" name="senha">
+                    </fieldset>
+                    <fieldset>
+                        <legend>Preferências</legend>
+                        <p>Em qual bolsa você tem mais investimentos?</p>
+                        <div>
+                            <input type="radio" id="ibovespa" name="bolsa" value="ibovespa">
+                            <label for="ibovespa">Ibovespa</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="nasdaq" name="bolsa" value="nasdaq">
+                            <label for="nasdaq">Nasdaq</label>
+                        </div>
+                        <div>
+                            <input type="radio" id="nyse" name="bolsa" value="nyse">
+                            <label for="nyse">Nyse</label>
+                        </div>
+                        <br>
+                        <div>
+                            <input type="checkbox" id="newsletter" name="news">
+                            <label for="newsletter">Deseja receber nossos informativos?</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" id="terms" name="terms">
+                            <label for="terms">Aceita nosso termo de uso?</label>
+                        </div>
+                    </fieldset>
+                    <label for="estados">Qual seu Estado?</label>
+                    <select id="estados" name="estados">
+                        <option>São Paulo</option>
+                        <option>Rio de Janeiro</option>
+                        <option>Minas Gerais</option>
+                    </select>
+
+                    <label for="comentario">Digite seu comentário:</label>
+                    <textarea id="comentario" name="comentario"></textarea>
+
+                    <input type="submit" value="Enviar">
+
+                </form>
+
             </div>
         </main>
     </body>
