criação de funções em js

--- a/iffinance/index.html
+++ b/iffinance/index.html
@@ -6,14 +6,30 @@
         <title>IFFinance</title>
         <link rel="stylesheet" href="./css/style.css">
         <script>
-            const nome = "Renan"
+            //var var1 = "pouco utilizado" // var pode ser redeclarada e gerar problemas
+            // let var2 = "muito utilizado" // let não pode ser redeclarada
+            // var2 = "outro valor"
+            const nome = "Renan" // const não pode ser redeclarada e nem ter seu valor alterado
             const sobreNome = "Cavichi"
-            const nomeCompleto = nome + " " + sobreNome
+            //const nomeCompleto = nome + " " + sobreNome // concatenar
 
             const campoEscolhido = 'altura'
 
-            const user = {
+            function nomeCompleto(nome, sobreNome) {
+                return `${nome} ${sobreNome}`
+            }
+
+            const nCompleto = function (nome, sobreNome){
+                return `${nome} ${sobreNome}`
+            }
+
+            const nmCompleto = (nome, sobreNome) => {
+                return `${nome} ${sobreNome}`
+            }
+
+            const user = { // objeto
                 nome: "Paulo",
+                sobreNome: "da Silva",
                 email: "paulo@gmail.com",
                 altura: 1.75,
                 id: 10,
@@ -23,14 +39,15 @@
                     rua: "Rua dos Bobos",
                     numero: 0
                 },
-                sobrenome: () => {
-                    return nome
-                }
+                nomeCompleto: (nome, sobreNome) => {
+                    return `${nome} ${sobreNome}`
+                },
+                nCompleto: nomeCompleto
             }
 
             const idAdmins = [1, 5, 10, 80, {rua: 'Dos Bodos', numero: 0}]
 
-            console.log(`Olá ${user.sobrenome()}, seja bem-vindo! ${idAdmins[4].numoro}`)
+            console.log(`Olá ${teste(user.nome, user.sobreNome)}, seja bem-vindo! ${idAdmins[4].numoro}`)
         </script>
     </head>
     <body>
