--- a/iffinance/index.html
+++ b/iffinance/index.html
@@ -109,7 +109,7 @@
             const txtInput = document.getElementById('txtInput')
             const resultado = document.getElementById('resultado')
 
-            resultado.innerHTML = `<p>${txtInput.value}</p>`
+            resultado.innerHTML = `<p>${parseInt(txtInput.value) + 10}</p>`
         }
 
     </script>
