add atividade 1 and atividade 2

--- a/iffinance/index.html
+++ b/iffinance/index.html
@@ -108,8 +108,7 @@
         function pegarTexto () {
             const txtInput = document.getElementById('txtInput')
             const resultado = document.getElementById('resultado')
-
-            resultado.innerHTML = `<p>${parseInt(txtInput.value) + 10}</p>`
+            resultado.innerHTML = `<p>${txtInput.value}</p>`
         }
 
     </script>
