--- a/aulas/atividades-js/atividade2.html
+++ b/aulas/atividades-js/atividade2.html
@@ -42,12 +42,15 @@
         const v2 = +document.getElementById('txtInputV2').value
         const result = document.getElementById('txtInputResult')
     
+        // Number to String
+        //const valorTeste = 10
+        //console.log(valorTeste.toString()
+
         if(operador === '+') 
             return result.value = v1 + v2
         
-
         if(operador === '-'){ 
-           return result.value = v1 - v2
+            return result.value = v1 - v2
         }
 
         alert('Operador inválido')
