--- a/iffinance/contato.html
+++ b/iffinance/contato.html
@@ -73,9 +73,7 @@
                     <label for="comentario">Digite seu comentário:</label>
                     <textarea id="comentario" name="comentario">    </textarea>
 
-                    <input type="submit" value="Enviar">
-                    <button type="button" value="Resetar">
-
+                    <input type="submit" value="Enviar" style="width: 50%;">
                 </form>
 
             </div>
