add edit and delete card ticker

--- a/iffinance/index.html
+++ b/iffinance/index.html
@@ -43,7 +43,7 @@
                     <h1>Adicionar Ação</h1>
                     <button onclick="closeModal()">⨉</button>
                 </header>
-                <form onsubmit="AddTicker(event)">
+                <form onsubmit="addTicker(event)">
                     <label for="urlLogo">URL Logo:</label>
                     <input type="text" id="urlLogo" name="urlLogo">
                     <label for="nameCompany">Nome da Empresa:</label>
